(0.3.4)
MAJOR readme update.
Fixed default outlines when no component is chosen.

(0.3.3)
Added glslopt as an option to the processing pipe (Linux/Windows x86_64/x86
setups).
Further optimizations based on glslopt outputs.
Fix sharpening bug.
Changed packaging method so it includes Linux builds (needed in order to bundle
the right glslopt build).

(0.3.2)
Some refactor: consistent names, skipping unrelated parameters.
Changed file names to less confusing, as they should not be copied to override
manually (there is an install option for that!).
Performed benchmarks, fixed some parameters (now 90fps on my machine is smooth,
the previous version picked around 55fps).

(0.3.1)
Code changes in attempt to work it for the tester (@Parys at beamdog forums).
Added feature that makes the sprite circles thinner (and causes all the
inevitable side effects).

(0.3.0)
Complete refactor!
Common content separated in files used to build all shaders.
Reduced attempts to fix issues that happen with the original game shaders
anyways.
Reverse engineered parameters of texture samplers, slightly different dependent
on shader.
Much less details lost in rendering.
Much less false positives.
Separate code detects different kinds of errors (object tiles,
blended object tiles, animations with transparency). It's an attempt to remove
all lines for object tiles and animations with transparency, and highly
reduce their number for blended object tiles.

(0.2.6.1)
Bugfix!

(0.2.6)
Remove heuristic border detection via preprocessor for shaders other than
fpdraw.
Modify the heuristic border detection in order to account for: spell
animations with alpha, blended light objects and static object tiles.
Also not to break effect icons. It is not perfect, but my best idea so far.

(0.2.5)
Reduced number of false positives in heuristic border detection.
Extended movies support (common tiling logic, introduced fpyuvgry.glsl).

(0.2.4)
Restored some alpha values.