@@ -15,8 +15,8 @@ QUICK_MENU
 	~No specific settings, just templates for manual edit~ BEGIN 1000 END
 	~BGEE 1.3-like setup (Catmull-Rom everywhere)~ BEGIN 1000 1125 1225 END
 	~BGEE 1.3-like overly simple setup~ BEGIN 1000 1105 1225 END
-	~Recommended color adjustments only~ BEGIN 1000 1315 1415 1505 END
-	~Recommended color adjustments + BGEE 1.3-like setup (C-R everywhere)~ BEGIN 1000 1125 1225 1315 1415 1505 END
+	~Intense color adjustments only~ BEGIN 1000 1315 1415 1505 END
+	~Intense color adjustments + BGEE 1.3-like setup (C-R everywhere)~ BEGIN 1000 1125 1225 1315 1415 1505 END
 	~Moderate color adjustments only~ BEGIN 1000 1314 1415 1505 END
 	~Moderate color adjustments + BGEE 1.3-like setup (C-R everywhere)~ BEGIN 1000 1125 1225 1314 1415 1505 END
 	~drunktiefling's choice~ BEGIN 1000 1125 1215 1314 1415 1505 END
@@ -107,7 +107,7 @@ ACTION_FOR_EACH shader IN ~override/fpsprite.glsl~ BEGIN
 END
 ACTION_FOR_EACH shader IN ~override/fpselect.glsl~ BEGIN
 	COPY_EXISTING ~%shader%~ ~%shader%~
-		REPLACE_TEXTUALLY ~[ 	]uhOutlineSize[ 	]*=[ 	]*[+-]?[0-9]*\.?[0-9]*;~		~	uhOutlineSize	    =  1.5;~
+		REPLACE_TEXTUALLY ~[ 	]uhOutlineSize[ 	]*=[ 	]*[+-]?[0-9]*\.?[0-9]*;~		~	uhOutlineSize	    =  2.5;~
 	BUT_ONLY_IF_IT_CHANGES
 END
 
@@ -151,7 +151,7 @@ ACTION_FOR_EACH shader IN ~override/fpyuv.glsl~ ~override/fpyuvgry.glsl~ BEGIN
 	BUT_ONLY_IF_IT_CHANGES
 END
 
-BEGIN ~Use recommended color adjustments (gamma +2%, contrast +20%, brightness +10%), sprites only~ DESIGNATED 1305
+BEGIN ~Use intense color adjustments (gamma +2%, contrast +20%, brightness +10%), sprites only~ DESIGNATED 1305
 SUBCOMPONENT ~Color adjustments~
 REQUIRE_COMPONENT ~drunkshaders.tp2~ 1000 ~This requires the main component.~
 ACTION_FOR_EACH shader IN ~override/fpsprite.glsl~ ~override/fpselect.glsl~ BEGIN
@@ -162,7 +162,7 @@ ACTION_FOR_EACH shader IN ~override/fpsprite.glsl~ ~override/fpselect.glsl~ BEGI
 	BUT_ONLY_IF_IT_CHANGES
 END
 
-BEGIN ~Use recommended color adjustments (gamma +2%, contrast +20%, brightness +10%), all shaders~ DESIGNATED 1315
+BEGIN ~Use intense color adjustments (gamma +2%, contrast +20%, brightness +10%), all shaders~ DESIGNATED 1315
 SUBCOMPONENT ~Color adjustments~
 REQUIRE_COMPONENT ~drunkshaders.tp2~ 1000 ~This requires the main component.~
 ACTION_FOR_EACH shader IN ~override/fpfont.glsl~ ~override/fpdraw.glsl~ ~override/fptone.glsl~ ~override/fpseam.glsl~ ~override/fpsprite.glsl~ ~override/fpselect.glsl~ BEGIN
