@@ -7,6 +7,6 @@
 #define UH_VCOLOR_MODE				0
 #define UH_NEEDS_HEURISTIC_BORDER	0
 
-#define UVTC_SHIFT					vec2(-0.5, -0.5)
+#define UVTC_SHIFT					vec2(0.5, -0.5)
 
 
